objects/Interview__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>