objects/Interview__c/fields/Interview_Stage__c.field-meta.xml
<CustomField>
    <fullName>Interview_Stage__c</fullName>
    <label>Interview Stage</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Job_Posting__c</field>
            <operation>equals</operation>
            <valueField>Interview_Stage__c.Job_Posting__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Interview_Stage__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>