objects/Interview__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Posting</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>